# invariant

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROGRESS.md  README.md  SECURITY.md  audit.jsonl  deny.toml
crates/invariant-biosynthesis/: Cargo.toml
crates/invariant-biosynthesis/profiles/: government_bsl4_restricted.json
crates/invariant-biosynthesis/src/: attestation.rs  audit.rs  differential.rs  intent.rs  lib.rs  profiles.rs  threat.rs  validator.rs  watchdog.rs
crates/invariant-biosynthesis/src/bundle/: mod.rs
crates/invariant-biosynthesis/src/invariants/: chemical.rs  dna.rs  homology.rs  mod.rs  molecule.rs  peptide.rs  protocol.rs  stateful.rs
crates/invariant-biosynthesis/src/models/: audit.rs  bundle.rs  error.rs  execution_token.rs  mod.rs  profile.rs  verdict.rs
crates/invariant-biosynthesis/src/screening/: mod.rs
crates/invariant-biosynthesis/tests/: verdict_signature_roundtrip.rs
crates/invariant-cli/: Cargo.toml  build.rs
crates/invariant-cli/src/: key_file.rs  lib.rs  main.rs
crates/invariant-cli/src/biosynthesis/: mod.rs
crates/invariant-cli/src/commands/: adversarial.rs  audit.rs  audit_gaps.rs  bench.rs  campaign.rs  compliance.rs  diff.rs  differential.rs  eval.rs  forge.rs  inspect.rs  intent.rs  keygen.rs  mod.rs  profile_cmd.rs  serve.rs  transfer.rs  validate.rs  verify.rs  verify_package.rs  verify_self.rs
crates/invariant-cli/src/robotics/: mod.rs
crates/invariant-cli/tests/: adversarial_test.rs  campaign_test.rs  cnc_campaign_test.rs  cnc_cell_test.rs  cnc_tending_profile_test.rs  crypto_test.rs  integration_test.rs  proof_loop_smoke.rs  ur10e_urdf_test.rs
crates/invariant-coordinator/: Cargo.toml
crates/invariant-coordinator/src/: lib.rs  monitor.rs  partition.rs
crates/invariant-coordinator/tests/: fleet_10_robot.rs  partition_merge_soundness.rs
crates/invariant-core/: Cargo.toml
crates/invariant-core/profiles/: adversarial_single_joint.json  hello_stretch.json  spot.json  unitree_g1.json  unitree_h1.json  ur10e_haas_cell.json
crates/invariant-core/src/: actuator.rs  audit.rs  cycle.rs  differential.rs  digital_twin.rs  envelopes.rs  incident.rs  intent.rs  keys.rs  lib.rs  merkle.rs  monitors.rs  profiles.rs  proof_package.rs  replication.rs  sensor.rs  threat.rs  traits.rs  urdf.rs  util.rs  validator.rs  watchdog.rs
crates/invariant-core/src/authority/: chain.rs  crypto.rs  mod.rs  operations.rs  tests.rs
crates/invariant-core/src/models/: actuation.rs  (+8 more)
crates/invariant-core/tests/: audit_clock_regression.rs  audit_concurrent.rs  audit_preimage_golden.rs  audit_rotation_merkle.rs  audit_streaming_memory.rs  authority_predecessor_digest.rs  error_stability.rs  manifest_jcs_golden.rs  manifest_tamper.rs  merkle_known_vectors.rs  merkle_tamper.rs
crates/invariant-eval/: Cargo.toml
crates/invariant-eval/src/: differ.rs  guardrails.rs  lib.rs  presets.rs  rubric.rs
crates/invariant-eval/tests/: pipeline_e2e.rs
crates/invariant-fuzz/: Cargo.toml
crates/invariant-fuzz/src/: lib.rs  report.rs
crates/invariant-robotics/: Cargo.toml
crates/invariant-robotics/profiles/: pal_tiago.json  spot_with_arm.json  unitree_go2.json
crates/invariant-robotics/src/: actuator.rs  audit.rs  cycle.rs  differential.rs  digital_twin.rs  lib.rs  profiles.rs  sensor.rs  threat.rs  validator.rs  watchdog.rs
crates/invariant-robotics/tests/: physics_property_p15_p20.rs  physics_property_p18_p25.rs  physics_property_p1_p5.rs  physics_property_p6_p7_p9_p10.rs  physics_property_p8_p14.rs  physics_property_sr1_sr2.rs
crates/invariant-sim/: Cargo.toml  invariant_isaac_bridge.py
crates/invariant-sim/examples/: benchmark.rs
crates/invariant-sim/src/: campaign.rs  collector.rs  episode.rs  injector.rs  lib.rs  orchestrator.rs  reporter.rs  scenario.rs
crates/invariant-sim/tests/: campaigns_load.rs  category_b_generators.rs  category_c_e_generators.rs  category_c_g_generators.rs  category_c_more_generators.rs  category_d_generators.rs  category_e_h_generators.rs  category_e_m_more_generators.rs  category_f_generators.rs  category_f_sensors_generators.rs  category_g_09_cross_chain_splice.rs  category_g_generators.rs  category_g_more_generators.rs  category_h_generators.rs  category_i_k_m_more_generators.rs  category_i_k_more_authority.rs  category_i_k_more_generators.rs  category_i_more_generators.rs  category_j_m_more_generators.rs  category_j_more_generators.rs  category_k_l_generators.rs  category_m_generators.rs  category_n_generators.rs  determinism.rs  determinism_fixture.rs  no_threadrng.rs  scenario_coverage.rs
fuzz/: Cargo.toml  README.md  seed_corpora.sh
fuzz/corpus/bridge_handle_line/: heartbeat-false.txt  heartbeat.txt  two-frames.txt
fuzz/corpus/fuzz_command_json/: bom-prefixed.json  nan-velocity.json  oversized-seq.json  unicode-source.json
fuzz/corpus/fuzz_pca_chain/: expired-hop.b64  future-nbf.b64  not-base64.txt  single-hop.b64  two-hop.b64  wildcard-only.b64
fuzz/corpus/fuzz_profile_json/: abb_gofa.json  agility_digit.json
fuzz/corpus/fuzz_validate_pipeline/: null-joints.json
fuzz/fuzz_targets/: bridge_handle_line.rs  fuzz_command_json.rs  fuzz_cose_envelope.rs  fuzz_json_bomb.rs  fuzz_pca_chain.rs  fuzz_profile_json.rs  fuzz_validate_pipeline.rs
invariant-ros2/: CMakeLists.txt  package.xml
invariant-ros2/invariant_ros2/: invariant_node.py
invariant-ros2/launch/: invariant.launch.py
invariant-ros2/msg/: AuthoritySummary.msg  CheckResult.msg  Command.msg  CommandAuthority.msg  EndEffectorPosition.msg  JointState.msg  SignedActuation.msg  SignedVerdict.msg
invariant-ros2/test/: test_conversion.py
isaac/: __init__.py  campaign_runner.py  injector.py  pyproject.toml  reporter.py  run_campaign.py
isaac/envs/: __init__.py  bimanual_arms.py  cell_config.py  cnc_tending.py  dexterous_manipulation.py  humanoid_walk.py  mobile_base_navigation.py  quadruped_locomotion.py
isaac/tests/: test_bimanual_arms.py  test_bridge_e2e.py  test_cnc_tending.py  test_humanoid_walk.py  test_mobile_base_navigation.py  test_quadruped_locomotion.py  test_run_campaign.py
(+293 files in other folders)
