[workspace]
members = [
    "crates/invariant-core",
    "crates/invariant-robotics",
    "crates/invariant-biosynthesis",
    "crates/invariant-cli",
    "crates/invariant-sim",
    "crates/invariant-eval",
    "crates/invariant-fuzz",
    "crates/invariant-coordinator",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
authors = ["Clay Good <hi@claygood.com>"]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/clay-good/invariant"
homepage = "https://github.com/clay-good/invariant"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
coset = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

# Core utilities
rand = "0.10"
regex = "1.11"
thiserror = "2.0"
quick-xml = "0.40"

# CLI & server
clap = { version = "4.6", features = ["derive"] }
tokio = { version = "1.52" }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal — published crate names differ from local directory names because
# `invariant-core` and `invariant-cli` are already claimed on crates.io by
# another owner. We publish under `invariant-protocol` and `invariant`
# respectively; the `package = "..."` rename keeps the in-workspace alias.
invariant-core = { package = "invariant-protocol", path = "crates/invariant-core", version = "0.0.3" }
invariant-robotics = { path = "crates/invariant-robotics", version = "0.0.3" }
invariant-biosynthesis = { path = "crates/invariant-biosynthesis", version = "0.0.3" }
