<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>invariant_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS 2 bridge for the Invariant cryptographic command-validation firewall.
    Thin wrapper node that forwards commands to the Invariant Rust binary
    over a Unix domain socket and publishes signed verdicts.
  </description>
  <maintainer email="clay@goodluckllc.com">Clay Good</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
