[package]
name = "invariant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Invariant."

[[bin]]
name = "invariant"
path = "src/main.rs"

[dependencies]
invariant-core = { path = "../invariant-core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
