[package]
name = "invariant-robotics-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Multi-robot coordination safety monitor for Invariant (Step 39)."

[dependencies]
invariant-core = { package = "invariant-robotics-core", path = "../invariant-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
