[package]
name = "invariant-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["safety", "validation", "ed25519", "audit", "pca"]
categories = ["cryptography", "data-structures"]
description = "Domain-agnostic PIC/PCA protocol core for Invariant: authority chains, audit log, keys, validation traits. Part of the unified Invariant workspace at https://github.com/clay-good/invariant."

[dependencies]
ed25519-dalek.workspace = true
coset.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
base64.workspace = true
rand.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
