[package]
name = "invariant-robotics-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trace evaluation engine for Invariant (presets, rubrics, guardrails, differ)."
readme = "../../README.md"

[dependencies]
invariant-core = { package = "invariant-robotics-core", path = "../invariant-core", version = "0.0.3" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
