[package]
name = "invariant-eval"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["evaluation", "trace", "audit", "robotics", "biosynthesis"]
categories = ["development-tools"]
description = "Trace evaluation engine for Invariant — robotics and biosynthesis verdict/audit-log analysis. Part of the unified Invariant workspace at https://github.com/clay-good/invariant."

[dependencies]
invariant-core.workspace = true
invariant-robotics.workspace = true
invariant-biosynthesis.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
