[package]
name = "invariant-robotics-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adversarial testing framework for Invariant."
readme = "../../README.md"

[dependencies]
invariant-core = { package = "invariant-robotics-core", path = "../invariant-core", version = "0.0.2" }
invariant-sim = { package = "invariant-robotics-sim", path = "../invariant-sim", version = "0.0.2" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
sha2.workspace = true
thiserror.workspace = true
