[package]
name = "invariant-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simulation harness for Invariant (Isaac Lab integration and dry-run campaigns)."

[dependencies]
invariant-core = { path = "../invariant-core" }
# Unix socket + async I/O for Isaac Lab IPC bridge; no HTTP client needed (P2-13).
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
