[package]
name = "invariant-sim"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["simulation", "campaign", "safety", "robotics", "biosynthesis"]
categories = ["simulation"]
description = "Simulation harness for Invariant — campaign runners, scenario generators, Isaac Lab dry-run bridge. Part of the unified Invariant workspace at https://github.com/clay-good/invariant."

[dependencies]
invariant-core.workspace = true
invariant-robotics.workspace = true
invariant-biosynthesis.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
# rand_chacha 0.3 is the version pinned against rand 0.8 (which is what
# the rest of the workspace uses via the workspace dependency). Do not
# accept dependabot bumps to 0.9/0.10 without also bumping `rand` — the
# rand_core trait surface changed and the call sites in this crate break.
rand.workspace = true
rand_chacha = "0.3"
base64.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
chrono.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
